test success, add domain relation